  - BREAKING - enablePacketDedup defaults to TRUE
  - BREAKING - authMode defaults to digest now
  - BREAKING - removed old v1 APIs
  - BREAKING - parliament password removed, must configure common auth via the UI before
               upgrading or manually in the config file see https://arkime.com/settings#parliament
               and https://arkime.com/faq#how_do_i_upgrade_to_arkime_5
  - all - all programs support same config file formats (json/ini) and
  - all - authMode setting added
  - all - authMode=basic added
  - all - notifiers for parliament and arkime merged
          conflicts mitigated by appending "Parliament" to parliament notifiers
  - all - drop privileges is now AFTER http(s) list
          retrieval (file, elasticsearch)
  - capture - moloch converted to arkime
  - capture - override ips can now set any field
  - capture - overrideIpsFiles setting
  - capture - packetDropIpsFiles setting
  - capture - can have negative cert.validDays/cert.remainingDays (thanks mcgillowen)
  - capture - added cert.remainingSeconds/cert.remainingSeconds (thanks mcgillowen)
  - capture - cert.remainingDays is now based on the firstPacket of session
              instead of current time (thanks mcgillowen)
  - cont3xt - new bulk UI and support for bulk queries
  - cont3xt - lots of keyboard shortcut improvements
  - cont3xt - new array syntax for links substitution
  - cont3xt - new OpenSearch/Elasticsearch integration (config file only)
  - cont3xt - new viewRoles in config file per integration to control access
  - viewer - removed x-moloch-auth
  - viewer - files/history/stats now have cluster dropdown for multiviewer
  - parliament - dashboard-only mode removed, if you want users to just see
                 the dashboard don't assign them the parliamentUser role
  - parliament - configuration is now stored in opensearch/elasticsearch


4.5.1 2023/09/xx
  - release - fix viewer systemd file
  - all - handle cookies encoded, bad proxy

4.5.0 2023/09/13